--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-  "express": "^4.19.2",
-  "@sap/hana-client": "^2.18.0"
+  "express": "^4.19.2" 
 },
   "optionalDependencies": {
     "@sap/hana-client": "^2.27.19"
